--- a/software.html
+++ b/software.html
@@ -39,31 +39,47 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/twilio/jobs/1938642'>Job Application for Senior Software Engineer - Android Voice & Video SDKs at Twilio</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oG6sbfw9&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=nUWcoMwH'>NICE inContact Careers - Senior Specialist Software Engineer Java &amp; AWS</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/brewbird/4963c9e3-8b8a-4e79-a15a-5215830bcf72'>Brewbird - Embedded Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='http://profacebook.applytojob.com/apply/SReXcyxDbD/Software-Engineer-9590385'>Software Engineer (9590385) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/naborly/fd31df5a-9a96-4f57-958a-ee31b4491830'>Naborly - Senior Backend Software Engineer</a></h5> 
+<p><span class="badge badge-light">Toronto</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/twilio/jobs/1938642'>Job Application for Senior Software Engineer - Android Voice & Video SDKs at Twilio</a></h5> 
+<p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/twilio/jobs/1938653'>Job Application for Senior Software Engineer - Android Voice & Video SDKs at Twilio</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/twilio/jobs/1938660'>Job Application for Senior Software Engineer - Android Voice & Video SDKs at Twilio</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twilio/jobs/1938673'>Job Application for Senior Software Engineer - Android Voice & Video SDKs at Twilio</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1938673'>Job Application for Senior Software Engineer - Android Voice & Video SDKs at Twilio</a></h5> 
+<p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/kaleidoscope/job/osnqbfwa'>Kaleidoscope Careers - Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698446395-sr-software-engineer'>Visa Sr. Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698446395-sr-software-engineer'>Visa Sr. Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698445452-staff-software-engineer'>Visa Staff Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698445452-staff-software-engineer'>Visa Staff Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -75,11 +91,11 @@
 <p><span class="badge badge-light">Melbourne Australia  Australia Canberra Melbourne</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oF6sbfw8&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=n8kaoMwh'>NICE inContact Careers - Specialist Software Engineer Java &amp; AWS</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oF6sbfw8&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=n8kaoMwh'>NICE inContact Careers - Specialist Software Engineer Java &amp; AWS</a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kariusdx/831fede0-f883-4d6f-b548-e8412ec96fec'>Karius - Senior Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/kariusdx/831fede0-f883-4d6f-b548-e8412ec96fec'>Karius - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -131,7 +147,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oWnUafw7&__jvst=Employee&__jvsd=sJC77gwk&__jvsc=Twitter&bid=nNa8nMwJ'>Schneider Electric NAM Careers - Software Engineering Manager - Embedded Firmware</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oWnUafw7&__jvst=Employee&__jvsd=sJC77gwk&__jvsc=Twitter&bid=nNa8nMwJ'>Schneider Electric NAM Careers - Software Engineering Manager - Embedded Firmware</a></h5> 
 <p><span class="badge badge-light">St. Louis, Missouri</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -147,7 +163,7 @@
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698440151-fresher-software-engineer'>KMS Technology FRESHER SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698440151-fresher-software-engineer'>KMS Technology FRESHER SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -155,7 +171,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698439838-fresher-front-end-software-engineer'>KMS Technology FRESHER FRONT-END SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698439838-fresher-front-end-software-engineer'>KMS Technology FRESHER FRONT-END SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -169,7 +185,7 @@
 <p><span class="badge badge-light">Arlington, VA Arlington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aeratechnology/cfcc4de9-c90a-42d7-8a8e-ac38de6dc00d'>Aera Technology - Software Engineer in Test (Automation)</a></h5> 
+<h5><a href='https://jobs.lever.co/aeratechnology/cfcc4de9-c90a-42d7-8a8e-ac38de6dc00d'>Aera Technology - Software Engineer in Test (Automation)</a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -193,7 +209,7 @@
 <p><span class="badge badge-light">Vancouver, BC  Vancouver, BC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/realtor/e70c94a9-05af-46ed-9ee9-59c7e44e4d06'>realtor.com - Senior Software Engineer ? Managed Service Markets</a></h5> 
+<h5><a href='https://jobs.lever.co/realtor/e70c94a9-05af-46ed-9ee9-59c7e44e4d06'>realtor.com - Senior Software Engineer ? Managed Service Markets</a></h5> 
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -235,7 +251,7 @@
 <p><span class="badge badge-light">Arlington, VA Arlington</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/senior-software-engineer-12306'>Senior Software Engineer - Akamai Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/senior-software-engineer-12306'>Senior Software Engineer - Akamai Careers</a></h5> 
 <p><span class="badge badge-light">Tel Aviv, Israel</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -275,7 +291,7 @@
 <p><span class="badge badge-light">Sofia, Bulgaria</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://benefits-data-trust.breezy.hr/p/730e9c476ac5-senior-software-engineer-interactions'>Senior Software Engineer - Interactions at Benefits Data Trust</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://benefits-data-trust.breezy.hr/p/730e9c476ac5-senior-software-engineer-interactions'>Senior Software Engineer - Interactions at Benefits Data Trust</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -283,7 +299,7 @@
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.orizon.de/de/job/real-time-software-developer-m-f-d-manching-11985'>Real-Time Software Developer (m/f/d) in Manching - Orizon GmbH</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.orizon.de/de/job/real-time-software-developer-m-f-d-manching-11985'>Real-Time Software Developer (m/f/d) in Manching - Orizon GmbH</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -373,7 +389,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/percona/8dde575c-be09-4d78-a70c-239787ded810'>Percona - Backend Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/percona/8dde575c-be09-4d78-a70c-239787ded810'>Percona - Backend Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -389,7 +405,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424558-senior-software-engineer-with-saas-products-java-javascript-aws-agile-scrum-environment-'>Bey Senior Software Engineer with SaaS products, Java, JavaScript, AWS, agile/scrum environment. | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424558-senior-software-engineer-with-saas-products-java-javascript-aws-agile-scrum-environment-'>Bey Senior Software Engineer with SaaS products, Java, JavaScript, AWS, agile/scrum environment. | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -413,7 +429,7 @@
 <p><span class="badge badge-light">Canada  Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ImaginarySpaces/743999697183360-software-developer-senior'>Imaginary Spaces Software Developer - Senior | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ImaginarySpaces/743999697183360-software-developer-senior'>Imaginary Spaces Software Developer - Senior | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada  Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -428,22 +444,6 @@
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oF9jbfw2&__jvst=Employee+Referral&__jvsd=s2ImUhwM&__jvsc=Twitter&bid=nNrHnMwz'>Jobvite, Inc. Careers - Senior Software Engineer (Platform)</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MobileProgrammingLLC/743999698167583-staff-lead-software-engineer'>Mobile Programming LLC Staff/Lead Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Emeryville, CA</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/sugarcrm/job/oe6pbfwE'>SugarCRM Careers - Manager, Software Engineering</a></h5> 
-<p><span class="badge badge-light">Atlanta, Georgia</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/sugarcrm/job/ojfibfwL'>SugarCRM Careers - Software Engineer</a></h5> 
-<p><span class="badge badge-light">North Carolina</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/sundial/job/mbxktf7z6c44pbty3tbedtx1zh'>.NET Software Engineer 3 (16287) | Sundial Software Career Opportunities</a></h5> 
-<p><span class="badge badge-light">Madison, WI</span></p>
-<p>Posted on: 2019-10-29</p>
 <hr/>
 
 
